--- a/css/style.css
+++ b/css/style.css
@@ -11,12 +11,13 @@
 /* SEZIONE DELLA LOGINBAR e NAVBAR */
 /* LOGINBAR */
 
-.nav_login{
+#nav_login{
   content: "";
   display: table;
   clear: both;
   background-color: green;
   width: 100%;
+  border-bottom: 1px solid white;
 }
 .lingua_nav{
   float: left;
@@ -25,7 +26,7 @@
   height: 50px;
   width: 20%;
 }
-.lista_login{
+.lista_login {
   float: left;
   background-color: blue;
   /* debug */
@@ -35,7 +36,7 @@
 }
 
 /* NAVBAR */
-.nav_bar{
+#nav_bar{
   content: "";
   display: table;
   clear: both;
