--- a/css/style.css
+++ b/css/style.css
@@ -8,62 +8,77 @@
   margin: 0 auto;
 }
 ul{
-  margin: 10px 10px;
   text-align: left;
 }
 li {
   display: inline-block;
+  font-size: 20px;
+  font-weight:600;
+}
+a {
+  text-decoration: none;
+  color: #333333;
 }
 
 /* SEZIONE DELLA LOGINBAR e NAVBAR */
-
+nav li {
+  margin: 15px;
+}
 /* LOGINBAR */
 #nav_login{
   content: "";
   display: table;
   clear: both;
-  background-color: green;
+  /* background-color: green; */
   width: 100%;
-  border-bottom: 1px solid white;
+  border-bottom: 1px solid black;
 }
 #nav_login .lingua_nav{
   float: left;
-  background-color: red;
+  /* background-color: red; */
   /* debug */
   height: 50px;
-  width: 20%;
+  width: 50%;
 }
 #nav_login .lista_login {
   float: left;
-  background-color: wheat;
+  /* background-color: wheat; */
   /* debug */
   height: 50px;
-  width: 20%;
-  margin-left: 60%;
+  width: 50%;
+  /* margin-left: 40%; */
+}
+.lista_login ul, .lista_nav ul {
+  text-align: right;
 }
 
 /* NAVBAR */
+#nav_bar img{
+  margin-left: 10px;
+  width: 110px;
+}
 #nav_bar{
   content: "";
   display: table;
   clear: both;
-  background-color: orange;
+  /* background-color: orange; */
   width: 100%;
+  margin-top: 15px;
 }
 #nav_bar .logo_nav{
   float: left;
-  background-color: yellow;
+  /* background-color: yellow; */
   /* debug */
   height: 50px;
-  width: 20%;
+  width: 50%;
 }
 #nav_bar .lista_nav{
   float: left;
-  background-color: purple;
+  /* background-color: purple; */
   /* debug */
   height: 50px;
-  width: 40%;
-  margin-left: 40%;
+  width: 50%;
+  /* margin-left: 40%; */
 }
 
 /* SEZIONE BACKROUND HEADER */
@@ -94,13 +109,16 @@ li {
   background-color:#ff842a;
   padding: 25px;
   border-radius: 10px;
-  text-decoration: none;
   color: white;
+
 }
 .text_back_header p:last-child{
   margin-top: 50px;
 }
 /* SEZIONE CENTRALE CON COLONNE */
+main{
+  background-color: #ededed;
+}
 #box_centrale{
   color: #333333;
 }
@@ -111,6 +129,7 @@ li {
   /* background-color: wheat; */
   text-align: center;
   margin: 0 auto;
+
 }
 .prima_riga img {
   width: 300px;
@@ -136,7 +155,10 @@ li {
   text-decoration: none;
   color: white;
   margin: 15px 110px;
-
+}
+#box_centrale span{
+  font-size: 20px;
+  font-weight: 600;
 }
 .seconda_riga{
   content: "";
@@ -144,20 +166,26 @@ li {
   clear: both;
   /* debug */
   height: 200px;
-  background-color: wheat;
+  /* background-color: wheat; */
   width: 100%;
   margin-top:40px;
+  border: 2px solid #c9c9c9;
+  background-color: white;
 }
 .colonna1{
   float: left;
   width: 35%;
   /* height: 100px; */
-  background-color: red;
+  /* background-color: red; */
   text-align: center;
 }
 .colonna2{
   float: left;
   width: 45%;
   /* height: 100px; */
-  background-color: orange;
+  /* background-color: orange; */
+}
+.colonna2 span,h3{
+  margin: 15px 0;
+  display: block;
 }
