--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@
   width: 80%;
   margin: 0 auto;
 }
+p{
+  font-size: 20px;
+  font-weight: 600;
+}
 ul{
   text-align: left;
 }
@@ -99,8 +103,6 @@ nav li {
   color: #333333;
 }
 .text_back_header p{
-  font-size: 20px;
-  font-weight: 600;
   color: #333333;
   margin: 25pX 0;
   margin-bottom: 70px;
@@ -125,8 +127,6 @@ main{
 /* PRIMA RIGA */
 .prima_riga{
   width: 50%;
-  /* height:200px; */
-  /* background-color: wheat; */
   text-align: center;
   margin: 0 auto;
 
@@ -164,9 +164,6 @@ main{
   content: "";
   display: table;
   clear: both;
-  /* debug */
-  height: 200px;
-  /* background-color: wheat; */
   width: 100%;
   margin-top:40px;
   border: 2px solid #c9c9c9;
@@ -176,15 +173,11 @@ main{
 .colonna1{
   float: left;
   width: 35%;
-  /* height: 100px; */
-  /* background-color: red; */
   text-align: center;
 }
 .colonna2{
   float: left;
   width: 45%;
-  /* height: 100px; */
-  /* background-color: orange; */
 }
 .colonna2 span,h3{
   margin: 15px 0;
@@ -197,9 +190,7 @@ main{
 .terza_riga li{
   display: block;
 }
-.terza_riga h3, ul {
-  margin-top: 35px;
-}
+
 .terza_riga ul{
   margin-bottom: 35px;
 }
@@ -218,15 +209,11 @@ main{
   content: "";
   display: table;
   clear: both;
-  /* debug */
-  height: 500px;
   margin-top:40px;
 }
 
 
 .terza_riga p{
-  font-size: 20px;
-  font-weight: 600;
   color: #333333;
   padding-bottom: 30px;
   border-bottom: 1px solid  #333333;
@@ -247,4 +234,22 @@ main{
 }
 .colonna_3 p {
   margin-top: 14px;
+}
+/* SEZIONE SFUMATURA */
+#box_sfumatura {
+  text-align: center;
+  color: white;
+  width: 100%;
+  height: 500px;
+  background-image: linear-gradient(to right,#33b676,#316887 );
+}
+#box_sfumatura h2 {
+  font-size:40px;
+  margin-bottom: 40px;
+}
+
+.paragrafo{
+  padding-top: 50px;
+  width:85%;
+  margin: 0 auto;
 }
