--- a/css/style.css
+++ b/css/style.css
@@ -240,16 +240,37 @@ main{
   text-align: center;
   color: white;
   width: 100%;
-  height: 500px;
+  /* height: 500px; */
   background-image: linear-gradient(to right,#33b676,#316887 );
 }
 #box_sfumatura h2 {
   font-size:40px;
   margin-bottom: 40px;
 }
-
+[class*=col_tab]{
+  float: left;
+  width: 25%;
+  height: 200px;
+  border: 1px solid white;
+  position: relative;
+  }
+.tabella span {
+  position: absolute;
+  left: 50%;
+  top:50%;
+  transform: translate(-50%,-50%);
+  font-size: 35px;
+}
 .paragrafo{
   padding-top: 50px;
   width:85%;
   margin: 0 auto;
+}
+.tabella{
+  content: "";
+  display: table;
+  clear: both;
+  height: 400px;
+  margin-top: 40px;
+  width: 100%;
 }
