--- a/css/style.css
+++ b/css/style.css
@@ -240,7 +240,7 @@ main{
   text-align: center;
   color: white;
   width: 100%;
-  /* height: 500px; */
+  height: 800px;
   background-image: linear-gradient(to right,#33b676,#316887 );
 }
 #box_sfumatura h2 {
@@ -260,6 +260,7 @@ main{
   top:50%;
   transform: translate(-50%,-50%);
   font-size: 35px;
+  padding: 20px;
 }
 .paragrafo{
   padding-top: 50px;
@@ -273,4 +274,16 @@ main{
   height: 400px;
   margin-top: 40px;
   width: 100%;
+}
+.col_tab1, .col_tab5{
+  border-left: 0;
+}
+.col_tab4,.col_tab8{
+  border-right: 0;
+}
+.col_tab1,.col_tab2,.col_tab3,.col_tab4{
+  border-top: 0;
+}
+.col_tab5,.col_tab6,.col_tab7,.col_tab8{
+  border-bottom: 0;
 }
