--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@
   margin: 0;
   padding: 0;
   box-sizing:border-box;
+  font-family: 'Abel', sans-serif;
+  font-weight: 600;
 }
 .center{
   width: 80%;
@@ -112,8 +114,8 @@ nav li {
   padding: 25px;
   border-radius: 10px;
   color: white;
-
 }
+
 .text_back_header p:last-child{
   margin-top: 50px;
 }
@@ -286,4 +288,41 @@ main{
 }
 .col_tab5,.col_tab6,.col_tab7,.col_tab8{
   border-bottom: 0;
+}
+/* SEZIONE SPONSOR */
+.sponsor img {
+  width: 200px;
+  margin: 15px;
+  float: right;
+}
+#box_sponsor{
+  background-color: white;
+  width: 100%;
+  height: 400px;
+}
+.riga_sponsor{
+  width: 100%;
+  height: 300px;
+  background-color: green;
+  content: "";
+  display: table;
+  clear: both;
+  margin-top:40px;
+}
+.numeri {
+  float: left;
+  width: 30%;
+  height: 200px;
+  background-color: red;
+  text-align: center;
+}
+.sponsor{
+  float: left;
+  width: 70%;
+  height: 200px;
+  background-color: yellow;
+}
+.numeri h2, p {
+  width: 50%;
+  margin:25px auto;
 }
