--- a/css/style.css
+++ b/css/style.css
@@ -290,39 +290,62 @@ main{
   border-bottom: 0;
 }
 /* SEZIONE SPONSOR */
-.sponsor img {
-  width: 200px;
-  margin: 15px;
-  float: right;
-}
 #box_sponsor{
   background-color: white;
   width: 100%;
   height: 400px;
 }
 .riga_sponsor{
-  width: 100%;
-  height: 300px;
-  background-color: green;
   content: "";
   display: table;
   clear: both;
   margin-top:40px;
+  width: 100%;
+}
+.sponsor img {
+  width: 200px;
+  margin: 15px;
+  float: right;
 }
 .numeri {
   float: left;
   width: 30%;
   height: 200px;
-  background-color: red;
   text-align: center;
+}
+.numeri h2 {
+  width: 50%;
+  margin:25px auto;
+  text-align: center;
+}
+.numeri p {
+  text-align: center;
+  width: 50%;
+  margin: 0 auto;
 }
 .sponsor{
   float: left;
   width: 70%;
   height: 200px;
-  background-color: yellow;
 }
-.numeri h2, p {
-  width: 50%;
-  margin:25px auto;
+.start_grow{
+  float: left;
+  width: 30%;
+  height: 200px;
+}
+.start_grow p, h2 {
+  text-align: left;
+  margin: 20px 0;
+}
+.start_grow a {
+  display: inline-block;
+  background-color:#ff842a;
+  padding: 25px;
+  border-radius: 10px;
+  text-decoration: none;
+  color: white;
+}
+.start_grow span {
+  display: block;
+  margin-top: 20px;
 }
