--- a/css/style.css
+++ b/css/style.css
@@ -137,8 +137,9 @@ main{
   width: 300px;
 }
 .prima_riga h2{
-  font-size: 40px;
+  font-size: 50px;
   margin-bottom: 30px;
+  text-align: center;
 }
 .prima_riga span{
   font-size: 20px;
@@ -349,27 +350,76 @@ main{
   margin-top: 20px;
 }
 /* SEZIONE FOOTER */
-#footer li{
+#footer{
+  width: 100%;
+  /* debug */
+  height: 500px;
+  background-color:#22314b;
+  color: #ececec;
+}
+.riga_footer li{
   display: block;
 }
 [class*=col_footer]{
   float: left;
   width: 25%;
-  /* debug */
-  height:200px;
 }
-#footer{
-  width: 100%;
-  /* debug */
-  height: 400px;
-  background-color:#22314b ;
-}
+
+/* PRIMA RIGA DEL FOOTER */
 .riga_footer{
   content: "";
   display: table;
   clear: both;
   width: 100%;
-  /* debug */
-  height: 300px;
-  background-color: wheat;
+  color:#ececec;
+}
+.riga_footer h3{
+  font-weight:900;
+  font-size: 25px;
+}
+.riga_footer li{
+  margin: 10px 0;
+}
+.riga_footer a{
+  background-color:#ececec;
+  padding: 5px 10px;
+  border-radius: 5px;
+  color: #22314b;
+}
+/* SECONDA RIGA DEL FOOTER */
+.riga_footer2{
+  content: "";
+  display: table;
+  clear: both;
+  width: 100%;
+  height: 200px;
+
+}
+.riga_footer2 a {
+  color: #ececec;
+}
+.riga_footer2 ul {
+  text-align: center;
+  border-bottom: 1px solid #ececec;
+  padding: 15px;
+}
+.riga_footer2 li {
+  margin: 0 15px;
+}
+.lingue_footer{
+  float: left;
+  width: 100%;
+}
+.logo_footer{
+  float: left;
+  width: 50%;
+  height: 100;
+  padding: 15px;
+}
+.legalstuff_footer{
+  float: left;
+  width: 50%;
+  height: 100px;
+  text-align: right;
+  padding: 15px;
 }
