--- a/css/style.css
+++ b/css/style.css
@@ -151,13 +151,13 @@ main{
   width: 145px;
 }
 #box_centrale a{
-  display: block;
+  display: inline-block;
   background-color:#ff842a;
-  padding: 25px;
+  padding: 20px 30px;
   border-radius: 10px;
   text-decoration: none;
   color: white;
-  margin: 15px 110px;
+  margin: 0 auto;
 }
 #box_centrale span{
   font-size: 20px;
@@ -199,22 +199,24 @@ main{
 }
 [class*="colonna_"]{
   float:left;
-  width: 31%;
-  margin: 15px;
+  width: 30%;
+  margin: 20px;
   text-align: center;
   border: 2px solid #c9c9c9;
   background-color: white;
   padding: 50px;
-  padding-bottom: 5px;
+  padding-bottom: 40px;
 }
 
 .terza_riga{
   content: "";
   display: table;
   clear: both;
-  margin-top:40px;
+  margin-top:40px 0;
 }
-
+.terza_riga h2{
+  text-align: center;
+}
 .terza_riga p{
   color: #333333;
   padding-bottom: 30px;
@@ -251,6 +253,7 @@ main{
 #box_sfumatura h2 {
   font-size:40px;
   margin-bottom: 40px;
+  text-align: center;
 }
 [class*=col_tab]{
   float: left;
